--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.firebase-emulator-warning {
+  display: none;
+}
