--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overscroll-behavior: none; /* Prevent overscroll */
 }
 
 .firebase-emulator-warning {
