--- a/src/fullcalendar.css
+++ b/src/fullcalendar.css
@@ -14,7 +14,6 @@
   --fc-button-active-border-color: transparent;
 
   --fc-event-bg-color: #3788d8;
-  --fc-event-border-color: #3788d8;
   --fc-event-selected-overlay-color: rgba(0, 0, 0, 0.25);
 
   --fc-more-link-bg-color: #d0d0d0;
@@ -32,6 +31,7 @@
   --fc-neutral-text-color: var(--chakra-colors-gray-500);
   --fc-border-color: var(--chakra-colors-gray-200);
   --fc-event-text-color: var(--chakra-colors-gray-800);
+  --fc-event-border-color: var(--chakra-colors-gray-400);
   --fc-button-text-color: var(--chakra-colors-gray-800);
   --fc-button-bg-color: var(--chakra-colors-gray-100);
   --fc-button-hover-bg-color: var(--chakra-colors-gray-200);
@@ -45,6 +45,7 @@
   --fc-neutral-text-color: var(--chakra-colors-gray-500);
   --fc-border-color: var(--chakra-colors-gray-550);
   --fc-event-text-color: var(--chakra-colors-gray-100);
+  --fc-event-border-color: var(--chakra-colors-whiteAlpha-400);
   --fc-button-text-color: var(--chakra-colors-gray-100);
   --fc-button-bg-color: var(--chakra-colors-gray-600);
   --fc-button-hover-bg-color: var(--chakra-colors-gray-550);
@@ -56,12 +57,21 @@
 /* Event */
 .fc-event {
   cursor: pointer;
-}
-.fc-v-event {
-  border-color: transparent;
+  padding: 2px 4px;
+  overflow: hidden;
 }
 a.fc-event:hover {
   border-color: var(--chakra-colors-gray-500);
+  overflow: initial;
+}
+a.fc-v-event:hover .fc-event-title {
+  overflow: initial;
+}
+div.fc-timegrid-event-harness:hover {
+  z-index: 3 !important;
+}
+a.fc-daygrid-event:hover {
+  background: var(--fc-list-event-hover-bg-color);
 }
 
 /* Title */
