--- a/src/components/molecules/editor2/themes/RichEditorTheme.css
+++ b/src/components/molecules/editor2/themes/RichEditorTheme.css
@@ -124,14 +124,14 @@
   max-width: 100%;
   overflow-y: scroll;
   table-layout: fixed;
-  width: calc(100% - 25px);
-  margin: 30px 0;
+  width: 100%;
+  margin: 1em 0;
 }
 .RichEditor__tableSelected {
   outline: 2px solid rgb(60, 132, 244);
 }
 .RichEditor__tableCell {
-  border: 1px solid #bbb;
+  border: 1px solid #ddd;
   min-width: 75px;
   vertical-align: top;
   text-align: start;
@@ -160,7 +160,7 @@
   top: 0;
 }
 .RichEditor__tableCellHeader {
-  background-color: #f2f3f5;
+  background-color: #f8f8fa;
   text-align: start;
 }
 .RichEditor__tableCellSelected {
