--- a/src/components/molecules/editor2/index.css
+++ b/src/components/molecules/editor2/index.css
@@ -15,6 +15,10 @@
   outline: 0;
 }
 
+#typeahead-menu {
+  z-index: 2000;
+}
+
 .typeahead-popover {
   background: #fff;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
